    cause problems for anything using dpkg-dev to build packages as those
    are already fatal on that case.
  * Add new deb-split(5) man page.
  * Fix misspellings of “explicitly” all over the place.
  * Normalize ar member names when reading (removing trailing spaces and
    slash), this allows deb-split packages be created with GNU ar.

  [ Modestas Vainius ]
  * Implement symbol patterns (Closes: #563752). From now on, it is possible to
    match multiple symbols with a single entry in the symbol file template.
    While the concept is not new (wildcards also match multiple symbols),
    patterns cover much more ground and are a lot more flexible. Together with
    the framework, 3 basic pattern types are supported:
    - c++ - matching C++ symbols by their demangled name (as emitted by
      c++filt);
    - symver - matching by symbol version. It replaces the wildcards feature
      which is still supported for backwards compatibility but is reimplemented
      on top of the new framework;
    - regex - matching symbol names with perl regular expression.
    Basic patterns may be combined where it makes sense.
  * As a positive side effect of the new symbol patterns implementation,
    patterns are now treated like normal symbols whenever possible, e.g. a
    pattern is MISSING if it does not match anything. As a result,
    dpkg-gensymbols is now able to detect NEW/MISSING symbols when patterns are
    present in the symbol file (Closes: #541464). Please note, however, that
    there is no way to detect symbol changes in the pattern match sets.

  [ Updated dpkg translations ]
  * French (Christian PERRIER).
  * German (Sven Joachim).
  * Simplified Chinese (Aron Xua). Closes: #558794
  * Slovak (Ivan Masár). Closes: #559269
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * German (Sven Joachim).

  [ Updated man page translations ]
  * French (Christian Perrier): correcting inconsistencies for the translation